# docs/swagger.yaml
@@ -104,6 +104,28 @@ info:
   version: "1.0"
 paths:
   /admin/category:
+    delete:
+      parameters:
+      - description: 分类id
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/common.Result'
+        "500":
+          description: DeleteById failed
+          schema:
+            $ref: '#/definitions/common.Result'
+      security:
+      - JWTAuth: []
+      tags:
+      - Category
     post:
       parameters:
       - description: 新增分类信息
@@ -123,6 +145,120 @@ paths:
           description: Invalid request payload
           schema:
             $ref: '#/definitions/common.Result'
+      security:
+      - JWTAuth: []
+      tags:
+      - Category
+    put:
+      parameters:
+      - description: 编辑分类的内容
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.CategoryDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/common.Result'
+        "400":
+          description: invalid params failed
+          schema:
+            $ref: '#/definitions/common.Result'
+        "500":
+          description: deleteById failed
+          schema:
+            $ref: '#/definitions/common.Result'
+      security:
+      - JWTAuth: []
+      tags:
+      - Category
+  /admin/category/list:
+    get:
+      parameters:
+      - description: 查询信息
+        in: query
+        name: type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/common.Result'
+      security:
+      - JWTAuth: []
+      tags:
+      - Category
+  /admin/category/page:
+    get:
+      parameters:
+      - description: 分类类型：1为菜品分类，2为套餐分类
+        in: query
+        name: type
+        type: integer
+      - description: 分页查询的name
+        in: query
+        name: name
+        type: string
+      - description: 分页查询的页数
+        in: query
+        name: page
+        type: integer
+      - description: 分页查询的页容量
+        in: query
+        name: pageSize
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/common.Result'
+        "400":
+          description: Invalid request payload
+          schema:
+            $ref: '#/definitions/common.Result'
+        "500":
+          description: PageQuery failed
+          schema:
+            $ref: '#/definitions/common.Result'
+      security:
+      - JWTAuth: []
+      tags:
+      - Category
+  /admin/category/status/{status}:
+    post:
+      parameters:
+      - description: 分类id
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: 状态
+        in: path
+        name: status
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/common.Result'
+        "500":
+          description: SetStatus failed
+          schema:
+            $ref: '#/definitions/common.Result'
+      security:
+      - JWTAuth: []
       tags:
       - Category
   /admin/employee:
