# internal/api/request/category.go
@@ -8,8 +8,8 @@ type CategoryDTO struct {
 }
 
 type CategoryPageQueryDTO struct {
-	Name     string `form:"name"`     // 分页查询的name
-	Page     int    `form:"page"`     // 分页查询的页数
-	PageSize int    `form:"pageSize"` // 分页查询的页容量
-	Cate     int    `form:"type"`     // 分类类型：1为菜品分类，2为套餐分类
+	Name     string `form:"name" json:"name,omitempty"` // 分页查询的name
+	Page     int    `form:"page" json:"page"`           // 分页查询的页数
+	PageSize int    `form:"pageSize" json:"page_size"`  // 分页查询的页容量
+	Cate     int    `form:"type" json:"cate,omitempty"` // 分类类型：1为菜品分类，2为套餐分类
 }
