# internal/router/admin/category.go
@@ -24,8 +24,7 @@ func (cr *CategoryRouter) InitApiRouter(router *gin.RouterGroup) {
 
 	{
 		privateRouter.POST("", categoryCtrl.AddCategory)
-
-		privateRouter.GET("/page", categoryCtrl.PageQuery)
+		privateRouter.GET("page", categoryCtrl.PageQuery)
 		privateRouter.GET("list", categoryCtrl.List)
 		privateRouter.DELETE("", categoryCtrl.DeleteById)
 		privateRouter.PUT("", categoryCtrl.EditCategory)
